tests/invalid/DefiniteAssign_Invalid_3.whiley
import * from whiley.lang.*

function f(int x) -> int
requires (x >= 0) && (y > 0):
    return x
